# terriblequotebot-rust-pub

./: .gitignore  Cargo.toml  README.md
serenity-0.8.7/src/model/: gateway.rs  user.rs  webhook.rs
serenity-0.8.7/src/model/channel/: guild_channel.rs  message.rs
serenity-0.8.7/src/model/guild/: emoji.rs
src/: commandparser.rs  configs.rs.example  main.rs  sqltools.rs
