[package]
name = "TerribleQuoteBot"
version = "0.1.0"
authors = ["crab"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.5"
rand = "0.7.3"

[dependencies.serenity]
default-features = false
features = ["model", "cache", "framework", "gateway", "http", "rustls_backend"]
version = "0.8.7"

[patch.crates-io]
serenity = { path = "./serenity-0.8.7/" }